--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "survey_analysis"
 version = "0.1.0"
+requires-python = ">= 3.10.8"
 dependencies = [
-    'python>=3.10.8',
     'httpx>=0.24.1',
     'pydantic>=2.5.2',
     'python-dotenv>=1.0.0',
