--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
 [project.optional-dependencies]
 nb = [
     'ipython>=8.12.3',
+    'ipykernel>=6.16.2',
+    'pyarrow>=12.0.0',
     'matplotlib>=3.6.2',
     'nest_asyncio>=1.5.6',
     'pandas>=2.0.1',
